<resources>
    <string name="app_name">GeoGeo!</string>
    <string name="WelcomeTo">Welcome to</string>
    <string name="Play">Play</string>
    <string name="Aboutus">About Us</string>
    <string name="Quit">Quit</string>
    <string name="YourResult">Your Result:</string>
    <string name="Distance">Distance</string>
    <string name="Score">Score</string>
    <string name="Question1">Question 1:</string>
    <string name="Question2">Question 2:</string>
    <string name="Question3">Question 3:</string>
    <string name="Question4">Question 4:</string>
    <string name="Question5">Question 5:</string>
    <string name="TotalScore">Total Score:</string>
    <string name="title_activity_homescreen">GeoGeo!</string>
    <string name="bar_play">Play</string>
    <string name="bar_profil">Stats</string>
    <string name="bar_options">Options</string>
    <string name="stats_txt">Username:</string>
    <string name="stats_username">Tim</string>
    <string name="options_input">New username:</string>
    <string name="options_submit">Submit</string>
    <string name="play_classicGame">Classic Game</string>
    <string name="play_customGame">Custom Game</string>
    <string name="justPics">Just pictures</string>
    <string name="justText">Just text questions</string>
    <string name="SelectOne">Please select one:</string>
    <string name="Select">Please select:</string>
    <string name="Africa">Africa</string>
    <string name="Europe">Europe</string>
    <string name="NorthAmerica">North America</string>
    <string name="SouthAmerica">South America</string>
    <string name="Asia">Asia</string>
    <string name="Oceania">Oceania</string>
    <string name="stats_playedGames">Played Games:</string>
    <string name="stats_average">Average distance \n to target:</string>
    <string name="stats_highscore">Points:</string>
    <string name="stats_playedGamesDisplay"></string>
    <string name="stats_averageDisplay"></string>
    <string name="stats_highscoreDisplay"></string>
    <string name="stats_title">Your Stats</string>
    <string name="play_title">Gamemodi</string>
    <string name="options_title">Change Username</string>
    <string name="SummaryAboutUs">Hi Guys! \nThanks for playing the new GeoQuiz "GeoGeo!"! \nWe are a group of students at the Johannes Gutenberg University in Mainz/Germany.
    Due to a traineeship of the "Mobile Computing"-lecture we were commissioned to develop an application that is on the one hand fun to play and on the other hand capable of
    giving students some information about their environment. Therefore we decided to develop our GeoGeo! so that you and your friends can explore and enjoy the
    world by playing our quiz. \nHave Fun!</string>
    <string name="sign_in">Sign In</string>
    <string name="not_registered_sing_up">Not registered? Sign Up here</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in_here">Already have an account? Sign in here</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="main_menu">MAIN MENU</string>

    <integer name="google_play_services_version">12451000</integer>

</resources>
