<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomGame">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_focus"
        app:layout_constraintTop_toTopOf="parent">


    </LinearLayout>

    <TextView
        android:id="@+id/textSelect2"
        android:layout_width="133dp"
        android:layout_height="23dp"
        android:fontFamily="@font/architects_daughter"
        android:gravity="center"
        android:text="@string/SelectOne"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCustom"
        app:layout_constraintVertical_bias="0.303" />

    <CheckBox
        android:id="@+id/checkAfrica"
        android:layout_width="91dp"
        android:layout_height="34dp"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/Africa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.434" />

    <CheckBox
        android:id="@+id/checkAsia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/Asia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toEndOf="@+id/checkNorthAmerica"
        app:layout_constraintTop_toBottomOf="@+id/checkEuropa"
        app:layout_constraintVertical_bias="0.041" />

    <CheckBox
        android:id="@+id/checkEuropa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/Europe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toEndOf="@+id/checkAfrica"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.434" />

    <CheckBox
        android:id="@+id/checkNorthAmerica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/NorthAmerica"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkAfrica"
        app:layout_constraintVertical_bias="0.04000002" />

    <Button
        android:id="@+id/btnPlayCustom"
        android:layout_width="192dp"
        android:layout_height="71dp"
        android:background="@drawable/runde_button"
        android:fontFamily="@font/amarante"
        android:text="@string/Play"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.815" />

    <CheckBox
        android:id="@+id/checkPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/architects_daughter"
        android:text="Photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.286"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.228" />

    <CheckBox
        android:id="@+id/checkText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/architects_daughter"
        android:text="Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toEndOf="@+id/checkPhoto"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.228" />

    <CheckBox
        android:id="@+id/checkSoutAmerica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/SouthAmerica"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkNorthAmerica"
        app:layout_constraintVertical_bias="0.072" />

    <CheckBox
        android:id="@+id/checkOceania"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/Oceania"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.696"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkAsia"
        app:layout_constraintVertical_bias="0.075" />

    <TextView
        android:id="@+id/textCustom"
        android:layout_width="291dp"
        android:layout_height="61dp"
        android:fontFamily="@font/architects_daughter"
        android:gravity="center"
        android:text="@string/play_customGame"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/textSelect1"
        android:layout_width="133dp"
        android:layout_height="23dp"
        android:fontFamily="@font/architects_daughter"
        android:gravity="center"
        android:text="@string/Select"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCustom"
        app:layout_constraintVertical_bias="0.059" />
</androidx.constraintlayout.widget.ConstraintLayout>