<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/lineTop"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        app:layout_constraintBottom_toTopOf="@+id/StatisticTable"
        app:layout_constraintEnd_toEndOf="parent" />

    <TableLayout
        android:id="@+id/StatisticTable"
        android:layout_width="0dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TableRow
            android:id="@+id/profil_tablerow1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/profil_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:fontFamily="@font/amarante"
                android:gravity="right"
                android:text="@string/stats_txt"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtDist1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/amarante"
                android:gravity="left"
                android:includeFontPadding="true"
                android:paddingLeft="20dp"
                android:text="@string/stats_username"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:id="@+id/profil_tablerow2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/profil_playedGamesTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:fontFamily="@font/amarante"
                android:gravity="right"
                android:text="@string/stats_playedGames"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/profil_playedGamesDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/amarante"
                android:gravity="left"
                android:paddingLeft="20dp"
                android:text="@string/stats_playedGamesDisplay"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:id="@+id/profil_tablerow3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/profil_highscoreTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:fontFamily="@font/amarante"
                android:gravity="right"
                android:text="@string/stats_highscore"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/profil_highscoreDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/amarante"
                android:gravity="left"
                android:paddingLeft="20dp"
                android:text="@string/stats_highscoreDisplay"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:id="@+id/profil_tablerow4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/profil_averageTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:fontFamily="@font/amarante"
                android:gravity="right"
                android:text="@string/stats_average"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/profil_averageDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/amarante"
                android:gravity="left"
                android:paddingLeft="20dp"
                android:text="@string/stats_averageDisplay"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:id="@+id/profil_tablerow5"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/profil_txt5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:fontFamily="@font/amarante"
                android:gravity="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/profil_display5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/amarante"
                android:gravity="center"
                android:text="@string/stats_averageDisplay"
                android:textSize="18sp" />

        </TableRow>


    </TableLayout>

    <TextView
        android:id="@+id/profil_title"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:fontFamily="@font/amarante"
        android:gravity="center"
        android:text="@string/stats_title"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/StatisticTable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.99" />


</androidx.constraintlayout.widget.ConstraintLayout>